--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,14 @@ build/
 vagn/amrl_maps/
 vagn/amrl_msgs/
 bind/
-result/
+result*/
 *.npy
 worlds/
 __pycache__/
 .vscode/
 .catkin_workspace
 devel/
+*.png
+*.jpg
+src/CMakeLists.txt
 
